// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code block math custom language does not impact other code blocks 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "math",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 40,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "code",
      "value": "a^2 + b^2 = c^2",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 7,
              "offset": 52,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 42,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 7,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 42,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 53,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`code block math custom language renders code block math 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "tex",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 39,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "code",
      "value": "a^2 + b^2 = c^2",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 7,
              "offset": 51,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 41,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 7,
          "offset": 51,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 41,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 52,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`code block math default language does not impact other code blocks 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "latex",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 41,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "code",
      "value": "a^2 + b^2 = c^2",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 7,
              "offset": 53,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 43,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 7,
          "offset": 53,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 43,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 54,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`code block math default language renders code block math 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "math",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 40,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "code",
      "value": "a^2 + b^2 = c^2",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 7,
              "offset": 52,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 42,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 7,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 42,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 53,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`code block math default language sanitizes HTML inside 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "math",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 72,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "code",
      "value": "a^2 + <script>alert("hello")</script> b^2 = c^2",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 7,
              "offset": 84,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 74,
            },
          },
          "type": "text",
          "value": "text after",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 7,
          "offset": 84,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 74,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 85,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
